fix(custom-select): keyboard focus ring appears on mouse interaction

--- a/packages/components/src/components/custom-select-list-item/custom-select-list-item.scss
+++ b/packages/components/src/components/custom-select-list-item/custom-select-list-item.scss
@@ -34,7 +34,7 @@ db-custom-select-list-item:not(:last-of-type) {
 		}
 	}
 
-	&:has(> label > input:focus-within) {
+	&:has(> label > input:focus-visible) {
 		@extend %focus-placeholder;
 	}
 
