--- a/packages/foundations/scss/colors/_default-color-icons.scss
+++ b/packages/foundations/scss/colors/_default-color-icons.scss
@@ -1,11 +1,29 @@
 @mixin get-color-icons-light {
-	--db-textarea-resizer-image: svg-load('textarea-resizer.svg', fill=#282d37);
-	--db-textarea-scrollbar-button-decrement: svg-load('scrollbar-up.svg', fill=#282d37);
-	--db-textarea-scrollbar-button-increment: svg-load('scrollbar-down.svg', fill=#282d37);
+	--db-textarea-resizer-image: svg-load(
+		"layout/resize_handle_corner_20.svg",
+		fill=#282d37
+	);
+	--db-textarea-scrollbar-button-decrement: svg-load(
+		"arrows/chevron_up_20.svg",
+		fill=#282d37
+	);
+	--db-textarea-scrollbar-button-increment: svg-load(
+		"arrows/chevron_down_20.svg",
+		fill=#282d37
+	);
 }
 
 @mixin get-color-icons-dark {
-	--db-textarea-resizer-image: svg-load('textarea-resizer.svg', fill=#f8f8f9);
-	--db-textarea-scrollbar-button-decrement: svg-load('scrollbar-up.svg', fill=#f8f8f9);
-	--db-textarea-scrollbar-button-increment: svg-load('scrollbar-down.svg', fill=#f8f8f9);
+	--db-textarea-resizer-image: svg-load(
+		"layout/resize_handle_corner_20.svg",
+		fill=#f8f8f9
+	);
+	--db-textarea-scrollbar-button-decrement: svg-load(
+		"arrows/chevron_up_20.svg",
+		fill=#f8f8f9
+	);
+	--db-textarea-scrollbar-button-increment: svg-load(
+		"arrows/chevron_down_20.svg",
+		fill=#f8f8f9
+	);
 }
