--- a/showcases/angular-showcase/src/app/components/switch/switch.component.html
+++ b/showcases/angular-showcase/src/app/components/switch/switch.component.html
@@ -17,6 +17,7 @@
 			[disabled]="exampleProps?.disabled"
 			[required]="exampleProps?.required"
 			[showLabel]="exampleProps?.showLabel"
+			[labelPosition]="exampleProps?.labelPosition"
 			[size]="exampleProps?.size"
 			[emphasis]="exampleProps?.emphasis"
 			[icon]="exampleProps?.icon"
