--- a/showcases/angular-showcase/src/app/components/switch/switch.component.html
+++ b/showcases/angular-showcase/src/app/components/switch/switch.component.html
@@ -18,6 +18,7 @@
 			[required]="exampleProps?.required"
 			[showLabel]="exampleProps?.showLabel"
 			[labelPosition]="exampleProps?.labelPosition"
+			[accent]="exampleProps?.accent"
 			[size]="exampleProps?.size"
 			[emphasis]="exampleProps?.emphasis"
 			[icon]="exampleProps?.icon"
