--- a/packages/components/src/components/switch/switch.scss
+++ b/packages/components/src/components/switch/switch.scss
@@ -328,23 +328,24 @@ $checked-active-transition-size: calc(
 			order: -1;
 			margin-inline-end: variables.$db-spacing-fixed-xs;
 		}
+		> input {
+		   margin-inline-end: 0;
+		}
 	}
 
 	/* Accent styling for checked switch */
 	&[data-accent="true"] {
 		> input:checked {
-			--db-check-element-border-color: var(--db-successful-on-bg-basic-emphasis-70-default);
-
-			background-color: var(--db-check-element-border-color);
-			border-color: var(--db-check-element-border-color);
+			background-color: colors.$db-successful-on-bg-basic-emphasis-70-default;
+			border-color: colors.$db-successful-on-bg-basic-emphasis-70-default;
 
 			@include helpers.hover {
-				background-color: var(--db-check-element-border-color);
-				border-color: var(--db-check-element-border-color);
+				background-color: colors.$db-successful-on-bg-basic-emphasis-70-default;
+				border-color: colors.$db-successful-on-bg-basic-emphasis-70-default;
 			}
 			@include helpers.active {
-				background-color: var(--db-check-element-border-color);
-				border-color: var(--db-check-element-border-color);
+				background-color: colors.$db-successful-on-bg-basic-emphasis-70-default;
+				border-color: colors.$db-successful-on-bg-basic-emphasis-70-default;
 			}
 
 			&::before {
