fix(switch): remove unnecessary selector for switch label

--- a/packages/components/src/components/switch/switch.scss
+++ b/packages/components/src/components/switch/switch.scss
@@ -324,8 +324,7 @@ $checked-active-transition-size: calc(
 	}
 
 	/* Set color for label */
-	> .db-switch-label,
-	> .db-switch-label * {
+	> .db-switch-label {
 		color: var(--db-switch-label-color, inherit);
 	}
 
