feat(switch): hand over valid and invalid message for angular and vue

--- a/showcases/angular-showcase/src/app/components/switch/switch.component.html
+++ b/showcases/angular-showcase/src/app/components/switch/switch.component.html
@@ -23,6 +23,8 @@
 			[icon]="exampleProps?.icon"
 			[iconTrailing]="exampleProps?.iconTrailing"
 			[validation]="exampleProps?.validation"
+			[invalidMessage]="exampleProps?.invalidMessage"
+			[validMessage]="exampleProps?.validMessage"
 		>
 			{{ exampleName }}
 		</db-switch>
