chore(): adapt comment for vertical-alignment of button

--- a/packages/components/src/styles/internal/_button-components.scss
+++ b/packages/components/src/styles/internal/_button-components.scss
@@ -5,5 +5,5 @@
 	text-align: center;
 	display: inline-flex;
 	align-items: center; // Centering the content vertically and horizontally
-	vertical-align: top; // Fix alignment of inline-flex buttons with different content
+	vertical-align: top; // Alignment of inline-flex buttons with different content
 }
