--- a/packages/components/src/styles/internal/_form-components.scss
+++ b/packages/components/src/styles/internal/_form-components.scss
@@ -1,5 +1,6 @@
 @use "sass:map";
 @use "sass:string";
+@use "sass:list";
 @use "@db-ux/core-foundations/build/styles/icons";
 @use "@db-ux/core-foundations/build/styles/fonts";
 @use "@db-ux/core-foundations/build/styles/variables";
@@ -151,24 +152,6 @@ $db-min-inline-size: var(
 				}
 			}
 		}
-
-		@each $state, $variant in (valid: successful, invalid: critical) {
-			&[data-custom-validity="#{$state}"] > label,
-			&:has(> #{$selector}[data-custom-validity="#{$state}"]) > label {
-				color: var(--db-#{$variant}-on-bg-basic-emphasis-70-default);
-			}
-
-			@if ($selector == textarea) {
-				&:has(> #{$selector}[data-custom-validity="#{$state}"]) {
-					&::before,
-					&::after {
-						// necessary to force this override over the placeholder-content mixin's ::before rule
-						// to avoid the label to influence the border of the textarea
-						content: none !important;
-					}
-				}
-			}
-		}
 	}
 }
 
@@ -200,9 +183,7 @@ $db-min-inline-size: var(
 	}
 
 	@if $selector == textarea {
-		--db-textarea-read-only: var(
-				--db-#{$variant}-bg-basic-level-1-default
-		);
+		--db-textarea-read-only: var(--db-#{$variant}-bg-basic-level-1-default);
 	}
 
 	@if $selector != textarea {
@@ -361,6 +342,18 @@ $input-valid-types:
 
 	@include get-validity($selector, "invalid") {
 		@include get-validity-color($selector, "invalid");
+	}
+
+	@include get-validity($selector) {
+		> label {
+			color: var(--db-successful-on-bg-basic-emphasis-90-default);
+		}
+	}
+
+	@include get-validity($selector, "invalid") {
+		> label {
+			color: var(--db-critical-on-bg-basic-emphasis-90-default);
+		}
 	}
 
 	@include placeholder-content($selector) {
