Revert "fix(card): removing (most likely) obsolete, but harmful declaration"
This reverts commit b3bbd17257939d01923e499845cfdf8c9105b45c.

--- a/packages/components/src/components/card/card.scss
+++ b/packages/components/src/components/card/card.scss
@@ -4,6 +4,10 @@
 @use "../../styles/internal/component";
 
 :is(a, button) {
+	&:has(.db-card) {
+		all: unset;
+	}
+
 	@include helpers.hover {
 		> .db-card,
 		> db-card > .db-card {
