fix(docs): displaying removeTagsTexts data

--- a/showcases/angular-showcase/src/app/components/custom-select/custom-select.component.html
+++ b/showcases/angular-showcase/src/app/components/custom-select/custom-select.component.html
@@ -61,6 +61,7 @@
 				[validMessage]="exampleProps?.validMessage"
 				[validation]="exampleProps?.validation"
 				(optionSelected)="console.log($event)"
+				[removeTagsTexts]="exampleProps?.removeTagsTexts"
 			></db-custom-select>
 		}
 	</ng-template>
