--- a/packages/components/src/components/infotext/infotext.scss
+++ b/packages/components/src/components/infotext/infotext.scss
@@ -10,7 +10,7 @@
 	@extend %db-overwrite-font-size-sm;
 
 	display: flex;
-	white-space: pre;
+	white-space: pre-wrap;
 
 	@include icons.has-no-icon {
 		@include icons.to-filled-icon;
