feat(): hand over remove-labels correctly and adapt model

--- a/showcases/angular-showcase/src/app/components/custom-select/custom-select.component.html
+++ b/showcases/angular-showcase/src/app/components/custom-select/custom-select.component.html
@@ -37,6 +37,7 @@
 				"
 				[label]="exampleName"
 				[options]="exampleProps?.options"
+				[removeTagsTexts]="exampleProps?.removeTagsTexts"
 				[variant]="exampleProps?.variant"
 				[message]="exampleProps?.message"
 				[required]="exampleProps?.required"
