feat(): add leading and trailing icon for visual aid

--- a/showcases/angular-showcase/src/app/components/switch/switch.component.html
+++ b/showcases/angular-showcase/src/app/components/switch/switch.component.html
@@ -22,6 +22,7 @@
 			[size]="exampleProps?.size"
 			[icon]="exampleProps?.icon"
 			[iconTrailing]="exampleProps?.iconTrailing"
+			[iconLeading]="exampleProps?.iconLeading"
 			[validation]="exampleProps?.validation"
 			[invalidMessage]="exampleProps?.invalidMessage"
 			[validMessage]="exampleProps?.validMessage"
