--- a/packages/components/src/components/switch/switch.scss
+++ b/packages/components/src/components/switch/switch.scss
@@ -341,6 +341,7 @@ $checked-active-transition-size: calc(
 	/* Set color for label */
 	> .db-switch-label {
 		color: var(--db-switch-label-color, inherit);
+		flex: 1 1 0;
 	}
 
 	/* Set color for helper message */
