--- a/packages/components/src/components/switch/switch.scss
+++ b/packages/components/src/components/switch/switch.scss
@@ -72,8 +72,7 @@ $checked-active-transition-size: calc(
 		}
 	}
 
-	> input:not(:checked):hover,
-	> input:not(:checked):focus {
+	> input:not(:checked):hover {
 		background-color: var(--db-check-element-hover-color-unchecked);
 	}
 
