feat(switch): pass showMessage for vue and angular

--- a/showcases/angular-showcase/src/app/components/switch/switch.component.html
+++ b/showcases/angular-showcase/src/app/components/switch/switch.component.html
@@ -26,6 +26,8 @@
 			[validation]="exampleProps?.validation"
 			[invalidMessage]="exampleProps?.invalidMessage"
 			[validMessage]="exampleProps?.validMessage"
+			[message]="exampleProps?.message"
+			[showMessage]="exampleProps?.showMessage"
 		>
 			{{ exampleName }}
 		</db-switch>
